--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color:  hsl(4, 100%, 67%);
+  --dark-state-grey:  hsl(234, 29%, 20%);
+  --charcoal-gray: hsl(235, 18%, 26%);
+  --grey: hsl(231, 7%, 60%);
+  --white: hsl(0, 0%, 100%);
+  --scren-lg: 1440px;
+  --paragraph-size: 16px;
+  --h1-size: 32px;
+}
+body {
+  font-family: Roboto, sans-serif;
+  background: #36384D;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.modal-picture, .modal-picture__image{
+  width: 100%;
+  height: auto;
+  max-height: 284px;
+  border-bottom-right-radius: 14px;
+  border-bottom-left-radius: 14px;
+}
+.modal-picture__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.modal__content-section {
+  padding: 46px 18px 0 18px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.modal__header {
+  font-size: var(--h1-size);
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
