--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,14 +1,15 @@
 .modal-wrapper {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 }
 .modal__container {
     height: 100vh;
-    max-height: 100vh;
-    background: #fff;
+    background: var(--white);
     display: flex;
     flex-direction: column;
     margin: 0;
     padding-bottom: 41px;
+    overflow: hidden;
 }
 @media (min-width: 1024px) {
 
