--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,44 @@ body {
   box-sizing: border-box;
 }
 
+@media (min-width: 1024px) {
+  .modal--signup {
+    height: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .modal-picture, .modal-picture__image {
+    height: 100%;
+    max-height: 100%;
+    width: 400px;
+    border-bottom-right-radius: unset;
+    border-bottom-left-radius: unset;
+  }
+  .modal-picture {
+    display: flex;
+  }
+  .modal-picture__image {
+    object-fit: contain;
+    min-height: 100%;
+  }
+
+  .modal__content-section {
+    box-sizing: border-box;
+    width: 400px;
+    max-width: 400px;
+    padding: 0 64px 0 40px;
+  }
+  .modal-content-section--success {
+    height: fit-content;
+    padding: 24px 40px 40px 40px;
+  }
+  .modal__svg {
+    margin-top: 0;
+  }
+}
+
 
 
 
