--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,7 +13,7 @@
     padding-bottom: 41px;
     overflow: hidden;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
     .modal-wrapper {
         position: relative;
     }
@@ -27,6 +27,6 @@
         margin: 0 auto;
         padding: 24px;
         border-radius: 35px;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     }
 }
